// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List List component 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.List"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="text-chunk obojobo-draft--chunks--list pad is-spacing-compact"
  >
    <div>
      <ol
        start={1}
        style={
          Object {
            "color": "#000",
            "listStyleType": undefined,
          }
        }
      >
        <span
          style={
            Object {
              "color": "black",
            }
          }
        >
          <li
            style={
              Object {
                "color": "#000",
                "listStyleType": "none",
              }
            }
          >
            <span
              style={
                Object {
                  "color": "black",
                }
              }
            />
          </li>
        </span>
      </ol>
    </div>
  </div>
</div>
`;

exports[`List List component with ascending indents 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.List"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="text-chunk obojobo-draft--chunks--list pad is-spacing-compact"
  >
    <div>
      <ol
        start={1}
        style={
          Object {
            "color": "#000",
            "listStyleType": undefined,
          }
        }
      >
        <span
          style={
            Object {
              "color": "black",
            }
          }
        >
          <li
            style={
              Object {
                "color": "#000",
                "listStyleType": "none",
              }
            }
          >
            <span
              style={
                Object {
                  "color": "black",
                }
              }
            >
              <ol
                start={1}
                style={
                  Object {
                    "color": "#000",
                    "listStyleType": undefined,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "black",
                    }
                  }
                >
                  <li
                    style={
                      Object {
                        "color": "#000",
                        "listStyleType": "lower-alpha",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "black",
                        }
                      }
                    >
                      <span
                        className="obo-text"
                        data-group-index={0}
                      >
                        <span>
                          <span>
                            <span>
                              One(indent=1)
                            </span>
                          </span>
                        </span>
                      </span>
                      <ul
                        start={1}
                        style={
                          Object {
                            "color": "#000",
                            "listStyleType": undefined,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "black",
                            }
                          }
                        >
                          <li
                            style={
                              Object {
                                "color": "#000",
                                "listStyleType": "square",
                              }
                            }
                          >
                            <span
                              style={
                                Object {
                                  "color": "black",
                                }
                              }
                            >
                              <span
                                className="obo-text"
                                data-group-index={1}
                              >
                                <span>
                                  <span>
                                    <span>
                                      Two(indent=2)
                                    </span>
                                  </span>
                                </span>
                              </span>
                              <ol
                                start={1}
                                style={
                                  Object {
                                    "color": "#000",
                                    "listStyleType": undefined,
                                  }
                                }
                              >
                                <span
                                  style={
                                    Object {
                                      "color": "black",
                                    }
                                  }
                                >
                                  <li
                                    style={
                                      Object {
                                        "color": "#000",
                                        "listStyleType": "upper-alpha",
                                      }
                                    }
                                  >
                                    <span
                                      style={
                                        Object {
                                          "color": "black",
                                        }
                                      }
                                    >
                                      <span
                                        className="obo-text"
                                        data-group-index={2}
                                      >
                                        <span>
                                          <span>
                                            <span>
                                              Three(indent=3)
                                            </span>
                                          </span>
                                        </span>
                                      </span>
                                      <ol
                                        start="10"
                                        style={
                                          Object {
                                            "color": "#000",
                                            "listStyleType": undefined,
                                          }
                                        }
                                      >
                                        <span
                                          style={
                                            Object {
                                              "color": "black",
                                            }
                                          }
                                        >
                                          <li
                                            style={
                                              Object {
                                                "color": "#000",
                                                "listStyleType": "upper-alpha",
                                              }
                                            }
                                          >
                                            <span
                                              style={
                                                Object {
                                                  "color": "black",
                                                }
                                              }
                                            >
                                              <span
                                                className="obo-text"
                                                data-group-index={3}
                                              >
                                                <span>
                                                  <span>
                                                    <span>
                                                      Four(indent=4)
                                                    </span>
                                                  </span>
                                                </span>
                                              </span>
                                              <ol
                                                start={1}
                                                style={
                                                  Object {
                                                    "color": "#000",
                                                    "listStyleType": undefined,
                                                  }
                                                }
                                              >
                                                <span
                                                  style={
                                                    Object {
                                                      "color": "black",
                                                    }
                                                  }
                                                >
                                                  <li
                                                    style={
                                                      Object {
                                                        "color": "#000",
                                                        "listStyleType": "decimal",
                                                      }
                                                    }
                                                  >
                                                    <span
                                                      style={
                                                        Object {
                                                          "color": "black",
                                                        }
                                                      }
                                                    >
                                                      <span
                                                        className="obo-text"
                                                        data-group-index={4}
                                                      >
                                                        <span>
                                                          <span>
                                                            <span>
                                                              Five(indent=5)
                                                            </span>
                                                          </span>
                                                        </span>
                                                      </span>
                                                      <ol
                                                        start={1}
                                                        style={
                                                          Object {
                                                            "color": "#000",
                                                            "listStyleType": undefined,
                                                          }
                                                        }
                                                      >
                                                        <span
                                                          style={
                                                            Object {
                                                              "color": "black",
                                                            }
                                                          }
                                                        >
                                                          <li
                                                            style={
                                                              Object {
                                                                "color": "#000",
                                                                "listStyleType": "lower-alpha",
                                                              }
                                                            }
                                                          >
                                                            <span
                                                              style={
                                                                Object {
                                                                  "color": "black",
                                                                }
                                                              }
                                                            >
                                                              <span
                                                                className="obo-text"
                                                                data-group-index={5}
                                                              >
                                                                <span>
                                                                  <span>
                                                                    <span>
                                                                      Six(indent=6)
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                              </span>
                                                            </span>
                                                          </li>
                                                        </span>
                                                      </ol>
                                                    </span>
                                                  </li>
                                                </span>
                                              </ol>
                                            </span>
                                          </li>
                                        </span>
                                      </ol>
                                    </span>
                                  </li>
                                </span>
                              </ol>
                            </span>
                          </li>
                        </span>
                      </ul>
                    </span>
                  </li>
                </span>
              </ol>
            </span>
          </li>
        </span>
      </ol>
    </div>
  </div>
</div>
`;

exports[`List List component with inverse indentation 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.List"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="text-chunk obojobo-draft--chunks--list pad is-spacing-compact"
  >
    <div>
      <ol
        start={1}
        style={
          Object {
            "color": "#000",
            "listStyleType": undefined,
          }
        }
      >
        <span
          style={
            Object {
              "color": "black",
            }
          }
        >
          <li
            style={
              Object {
                "color": "#000",
                "listStyleType": "decimal",
              }
            }
          >
            <span
              style={
                Object {
                  "color": "black",
                }
              }
            >
              <span
                className="obo-text"
                data-group-index={0}
              >
                <span>
                  <span>
                    <span>
                      One(indent=1)
                    </span>
                  </span>
                </span>
              </span>
              <ol
                start={1}
                style={
                  Object {
                    "color": "#000",
                    "listStyleType": undefined,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "black",
                    }
                  }
                >
                  <li
                    style={
                      Object {
                        "color": "#000",
                        "listStyleType": "none",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "black",
                        }
                      }
                    >
                      <ul
                        start={1}
                        style={
                          Object {
                            "color": "#000",
                            "listStyleType": undefined,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "black",
                            }
                          }
                        >
                          <li
                            style={
                              Object {
                                "color": "#000",
                                "listStyleType": "square",
                              }
                            }
                          >
                            <span
                              style={
                                Object {
                                  "color": "black",
                                }
                              }
                            >
                              <span
                                className="obo-text"
                                data-group-index={1}
                              >
                                <span>
                                  <span>
                                    <span>
                                      Two(indent=2)
                                    </span>
                                  </span>
                                </span>
                              </span>
                            </span>
                          </li>
                        </span>
                      </ul>
                    </span>
                  </li>
                  <li
                    style={
                      Object {
                        "color": "#000",
                        "listStyleType": "lower-alpha",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "black",
                        }
                      }
                    >
                      <span
                        className="obo-text"
                        data-group-index={2}
                      >
                        <span>
                          <span>
                            <span>
                              Three(indent=6)
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </li>
                </span>
              </ol>
            </span>
          </li>
        </span>
      </ol>
    </div>
  </div>
</div>
`;

exports[`List List component with irregular indentation 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.List"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="text-chunk obojobo-draft--chunks--list pad is-spacing-compact"
  >
    <div>
      <ol
        start={1}
        style={
          Object {
            "color": "#000",
            "listStyleType": undefined,
          }
        }
      >
        <span
          style={
            Object {
              "color": "black",
            }
          }
        >
          <li
            style={
              Object {
                "color": "#000",
                "listStyleType": "decimal",
              }
            }
          >
            <span
              style={
                Object {
                  "color": "black",
                }
              }
            >
              <span
                className="obo-text"
                data-group-index={0}
              >
                <span>
                  <span>
                    <span>
                      One(indent=1)
                    </span>
                  </span>
                </span>
              </span>
              <ol
                start={1}
                style={
                  Object {
                    "color": "#000",
                    "listStyleType": undefined,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "black",
                    }
                  }
                >
                  <li
                    style={
                      Object {
                        "color": "#000",
                        "listStyleType": "none",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "black",
                        }
                      }
                    >
                      <ul
                        start={1}
                        style={
                          Object {
                            "color": "#000",
                            "listStyleType": undefined,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "black",
                            }
                          }
                        >
                          <li
                            style={
                              Object {
                                "color": "#000",
                                "listStyleType": "square",
                              }
                            }
                          >
                            <span
                              style={
                                Object {
                                  "color": "black",
                                }
                              }
                            >
                              <span
                                className="obo-text"
                                data-group-index={1}
                              >
                                <span>
                                  <span>
                                    <span>
                                      Two(indent=2)
                                    </span>
                                  </span>
                                </span>
                              </span>
                              <ol
                                start={1}
                                style={
                                  Object {
                                    "color": "#000",
                                    "listStyleType": undefined,
                                  }
                                }
                              >
                                <span
                                  style={
                                    Object {
                                      "color": "black",
                                    }
                                  }
                                >
                                  <li
                                    style={
                                      Object {
                                        "color": "#000",
                                        "listStyleType": "none",
                                      }
                                    }
                                  >
                                    <span
                                      style={
                                        Object {
                                          "color": "black",
                                        }
                                      }
                                    >
                                      <ol
                                        start="10"
                                        style={
                                          Object {
                                            "color": "#000",
                                            "listStyleType": undefined,
                                          }
                                        }
                                      >
                                        <span
                                          style={
                                            Object {
                                              "color": "black",
                                            }
                                          }
                                        >
                                          <li
                                            style={
                                              Object {
                                                "color": "#000",
                                                "listStyleType": "none",
                                              }
                                            }
                                          >
                                            <span
                                              style={
                                                Object {
                                                  "color": "black",
                                                }
                                              }
                                            >
                                              <ol
                                                start={1}
                                                style={
                                                  Object {
                                                    "color": "#000",
                                                    "listStyleType": undefined,
                                                  }
                                                }
                                              >
                                                <span
                                                  style={
                                                    Object {
                                                      "color": "black",
                                                    }
                                                  }
                                                >
                                                  <li
                                                    style={
                                                      Object {
                                                        "color": "#000",
                                                        "listStyleType": "none",
                                                      }
                                                    }
                                                  >
                                                    <span
                                                      style={
                                                        Object {
                                                          "color": "black",
                                                        }
                                                      }
                                                    >
                                                      <ol
                                                        start={1}
                                                        style={
                                                          Object {
                                                            "color": "#000",
                                                            "listStyleType": undefined,
                                                          }
                                                        }
                                                      >
                                                        <span
                                                          style={
                                                            Object {
                                                              "color": "black",
                                                            }
                                                          }
                                                        >
                                                          <li
                                                            style={
                                                              Object {
                                                                "color": "#000",
                                                                "listStyleType": "lower-alpha",
                                                              }
                                                            }
                                                          >
                                                            <span
                                                              style={
                                                                Object {
                                                                  "color": "black",
                                                                }
                                                              }
                                                            >
                                                              <span
                                                                className="obo-text"
                                                                data-group-index={2}
                                                              >
                                                                <span>
                                                                  <span>
                                                                    <span>
                                                                      Three(indent=6)
                                                                    </span>
                                                                  </span>
                                                                </span>
                                                              </span>
                                                            </span>
                                                          </li>
                                                        </span>
                                                      </ol>
                                                    </span>
                                                  </li>
                                                </span>
                                              </ol>
                                            </span>
                                          </li>
                                        </span>
                                      </ol>
                                    </span>
                                  </li>
                                </span>
                              </ol>
                            </span>
                          </li>
                          <li
                            style={
                              Object {
                                "color": "#000",
                                "listStyleType": "square",
                              }
                            }
                          >
                            <span
                              style={
                                Object {
                                  "color": "black",
                                }
                              }
                            >
                              <span
                                className="obo-text"
                                data-group-index={3}
                              >
                                <span>
                                  <span>
                                    <span>
                                      Four(indent=2)
                                    </span>
                                  </span>
                                </span>
                              </span>
                              <ol
                                start={1}
                                style={
                                  Object {
                                    "color": "#000",
                                    "listStyleType": undefined,
                                  }
                                }
                              >
                                <span
                                  style={
                                    Object {
                                      "color": "black",
                                    }
                                  }
                                >
                                  <li
                                    style={
                                      Object {
                                        "color": "#000",
                                        "listStyleType": "none",
                                      }
                                    }
                                  >
                                    <span
                                      style={
                                        Object {
                                          "color": "black",
                                        }
                                      }
                                    >
                                      <ol
                                        start="10"
                                        style={
                                          Object {
                                            "color": "#000",
                                            "listStyleType": undefined,
                                          }
                                        }
                                      >
                                        <span
                                          style={
                                            Object {
                                              "color": "black",
                                            }
                                          }
                                        >
                                          <li
                                            style={
                                              Object {
                                                "color": "#000",
                                                "listStyleType": "upper-alpha",
                                              }
                                            }
                                          >
                                            <span
                                              style={
                                                Object {
                                                  "color": "black",
                                                }
                                              }
                                            >
                                              <span
                                                className="obo-text"
                                                data-group-index={4}
                                              >
                                                <span>
                                                  <span>
                                                    <span>
                                                      Five(indent=4)
                                                    </span>
                                                  </span>
                                                </span>
                                              </span>
                                            </span>
                                          </li>
                                        </span>
                                      </ol>
                                    </span>
                                  </li>
                                  <li
                                    style={
                                      Object {
                                        "color": "#000",
                                        "listStyleType": "upper-alpha",
                                      }
                                    }
                                  >
                                    <span
                                      style={
                                        Object {
                                          "color": "black",
                                        }
                                      }
                                    >
                                      <span
                                        className="obo-text"
                                        data-group-index={5}
                                      >
                                        <span>
                                          <span>
                                            <span>
                                              Six(indent=3)
                                            </span>
                                          </span>
                                        </span>
                                      </span>
                                    </span>
                                  </li>
                                </span>
                              </ol>
                            </span>
                          </li>
                        </span>
                      </ul>
                    </span>
                  </li>
                </span>
              </ol>
            </span>
          </li>
        </span>
      </ol>
    </div>
  </div>
</div>
`;
